Created the GET All request
Added the GET all request and the documentation for it as well as a convertion function to convert to the right conductivity unit. Also added tests for this function.
