# public/swaggerConfig.json
@@ -267,6 +267,105 @@
           }
         }
       }
+    },
+    "/all":{
+      "get": {
+        "tags": [
+          "Fetch by data-type"
+        ],
+        "summary": "Gets a list of all data",
+        "description": "Retrieves a JSON object with the property `content` which consists of an array with objects containing all the data in the UTC timezone",
+        "operationId": "getAll",
+        "parameters": [
+          {
+            "name": "tempunit",
+            "in": "query",
+            "description": "Optional. Sends the temperature based on what the unit is. Available units are `K`, `k`, `C`, `c`, `F` and `f`. If no unit is given, then the temperature unit is Kelvin",
+            "required": false,
+            "style": "form",
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "example": "C"
+            }
+          },
+          {
+            "name": "conductunit",
+            "in": "query",
+            "description": "Optional. Sends the conductivity based on what the unit is. Available units are `Spm`, `mhopm`, `mSpm`, `uSpm`, `Spcm`, `mhopcm`, `mSpcm`, `uSpcm`, `PPM`, and `ppm`. If no unit is given, then the conductivity unit is Spm",
+            "required": false,
+            "style": "form",
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "example": "ppm"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The data is successfully returned.",
+            "content": {
+              "application/json":{
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/AllResponse"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "If the `tempunit` or the `conductunit` parameter receives a value other than the available units mentioned above",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "One of the provided units is not supported. Read the documentation for valid parameters."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "405":{
+            "description": "Method not allowed. The endpoint only accepts GET-requests.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Method POST is not allowed for this endpoint"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "An internal server error prevented the data from being fetched successfully. Please submit an Issue at the official Github repo.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Error fetching data from the database"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -397,7 +496,43 @@
             "example": "2017-08-16T20:19:44.000Z"
           }
         },
+        
         "description": "The response from \"GET: / pH\"-endpoint."
+      },
+      "AllResponse": {
+        "type": "object",
+        "properties": {
+          "pH": {
+            "type": "number",
+            "format": "float",
+            "example": "7.568819899694824"
+          },
+          "temperature": {
+            "type": "number",
+            "format": "float",
+            "example": "289.0350035621094"
+          },
+          "conductivity": {
+            "type": "number",
+            "format": "float",
+            "example": "0.014349699941708317"
+          },
+          "date": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2017-08-16T20:19:44.000Z"
+          },
+          "position": {
+            "type": "string",
+            "format": "point",
+            "example": {
+              "x": 15.428787798375415,
+              "y": 56.19131790472419
+              }
+          }
+        },
+        
+        "description": "The response from \"GET: / All\"-endpoint."
       },
       "UploadResponse_sensors": {
         "type": "object",
